# ConvPatch

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
configs/: cifar100_vit_tiny_conv_stem.yaml  cifar100_vit_tiny_dwsep_conv_stem.yaml  cifar100_vit_tiny_hierarchical.yaml  cifar100_vit_tiny_linear.yaml  cifar100_vit_tiny_overlapping.yaml  cifar10_vit_tiny_conv_stem.yaml  cifar10_vit_tiny_dwsep_conv_stem.yaml  cifar10_vit_tiny_hierarchical.yaml  cifar10_vit_tiny_linear.yaml  cifar10_vit_tiny_overlapping.yaml
paper/: ANALYSIS_GOAL.md  EXPERIMENT_PLAN.md  OUTLINE.md  RESEARCH_PLAN.md  RESULTS.md  main.tex  references.bib
paper/figures/: VISUAL_GUIDE.md  generate_dummies.py
paper/results/: main_results_seed0.csv
scripts/: run_cifar100_all_seeds.sh  run_cifar100_experiments.sh  run_cifar10_experiments.sh  run_experiments.sh  setup_remote.sh  strip_cursor_coauthor.sh  summarize_runs.py
src/convpatch/: __init__.py  build.py  data.py  engine.py  train.py  utils.py
src/convpatch/models/: __init__.py  patch_embed.py  vit.py
