[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "convpatch"
version = "0.0.1"
description = "Convolutional vs linear patch embedding in vision encoders (controlled study)"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "einops",
    "pyyaml",
    "tqdm",
    "tensorboard",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
